README and API change
Added Settings page to README and changed API url from Kings College to Imperial. Unsure why this hadn't been done already. Maybe the change hadn't been committed or KCL URL redirects to IC. In any case, it has changed now to future proof the code

--- a/Settings/config.json
+++ b/Settings/config.json
@@ -2,7 +2,7 @@
 	"Pollutants": [],
 	"Frequency": "15min",
 	"LAQN": {
-		"API Address": "http://api.erg.kcl.ac.uk/AirQuality",
+		"API Address": "http://api.erg.ic.ac.uk/AirQuality",
 		"Metadata Address": "Information/MonitoringSiteSpecies/GroupName=London/Json",
 		"csv Address": "https://www.londonair.org.uk/london/asp/downloadsite.asp?",
 		"Tags": {
